# sqint

./: LICENSE  README.md  setup.cfg  sqliteview.css  sqliteview.py
sqint/: __init__.py  sqint.css  sqint.py
