[metadata]
name = sqint
version = attr: sqint.__version__
author = Collin J. Delker
author_email = code@collindelker.com
url = https://github.com/cdelker/sqint
description = Terminal SQLite Viewer and Editor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sqlite, database, tui
license = License :: OSI Approved :: MIT License
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python
        Topic :: Database
        Topic :: Database :: Front-Ends
        License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    textual>=0.26

[options.package_data]
* =
    *.css

[options.entry_points]
console_scripts = 
    sqint = sqint.sqint:main
